# win32-rust-app

./: Cargo.toml  readme.md
src/: main.rs
