[package]
name = "win32-rust-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Maybe later
# widestring = { git = "https://github.com/George-lewis/widestring-rs", branch = "pop!" }
winapi = { version = "0.3", features = ["everything"] }
